-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.9.0
-
None
-
3
-
9223372036854775807
Patch e14246641c04c9e3004043f58f469532223d06d6 added some code to the wireshark plugin to handle the new ladvise feature, but the changes appear to have broken the wireshark build.
On a side note, would it be possible to add a wireshark compile to the jenkins build so that there is coverage?